--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Inicio</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae magnam vitae eaque, debitis fugiat in excepturi iure quaerat. Numquam repellat tempora cum iure aliquid exercitationem maxime aspernatur dolores ipsa repellendus?</p>
-
+    <p>Lorem, <span> dolor sit amet consectetur adipisicing elit.</span> Molestiae magnam vitae eaque, debitis fugiat in excepturi iure quaerat. Numquam repellat tempora cum iure aliquid exercitationem maxime aspernatur dolores ipsa repellendus?</p>
+    <h2>Titulo 2</h2>
     
 </body>
 </html>
